--- a/demo-01-nlp-intro.ipynb
+++ b/demo-01-nlp-intro.ipynb
@@ -15,6 +15,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4ea65274-04bd-44e2-a0af-6d7c13babf55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run this code cell before any other cell\n",
+    "# install pandas 2.2.0 if in colab environment\n",
+    "import sys\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "  !pip install pandas==2.2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "a31b7a34-007c-4e89-8916-a07406598896",
    "metadata": {},
